crates/llvmkit-ir/tests/compile_fail/callbr_edit_has_no_remove.stderr
error[E0599]: no method named `remove_default` found for struct `CallBrEdit<'e, 'm, 'r, 'ctx, B, R>` in the current scope
  --> tests/compile_fail/callbr_edit_has_no_remove.rs:21:35
   |
21 |         reshape.edit_callbr(&bb)?.remove_default();
   |                                   ^^^^^^^^^^^^^^
   |
help: there is a method `redirect_default` with a similar name, but with different arguments
  --> src/pass_context.rs
   |
   | /     pub fn redirect_default(
   | |         &self,
   | |         new_to: &BasicBlockLabel<'ctx, Dyn, B>,
   | |         phi_values: &[Value<'ctx, B>],
   | |     ) -> IrResult<()> {
   | |_____________________^
